@@ -11,6 +11,7 @@ Please tag them using `#`, e.g. `Fixed #42`.
 - [ ] New code includes dedicated tests.
 - [ ] New code has been linted.
 - [ ] New code follows the project's style.
-- [ ] New code is compatible with a 3-Clause BSD license.
+- [ ] New code is compatible with the 3-Clause BSD license.
 - [ ] CHANGELOG has been updated.
 - [ ] AUTHORS has been updated.
+- [ ] Copyright years in module docstrings has been updated.
