@@ -22,6 +22,9 @@ If you:
     - [Documentation](#documentation)
     - [Testing](#testing)
     - [Plotting](#plotting)
+- [Less-Essential things to know about ampycloud for dev work](#less-essential-things-to-know-about-ampycloud-for-dev-work)
+    - [Updating the copyright years](#updating-the-copyright-years)
+
 
 ## Code of conduct
 
@@ -263,3 +266,16 @@ def some_plot_function(...):
 
 With this decorator, all functions will automatically deploy the effects associated to the value of `dynamic.AMPYCLOUD_PRMS.MPL_STYLE` which can take one of the following values:
 `['base', 'latex', 'metsymb']`.
+
+## Less-Essential things to know about ampycloud for dev work
+
+### Updating the copyright years
+The ampycloud copyright years may need to be updated if the development goes on beyond 2022. If so,
+the copyright years will need to be manually updated in the following locations:
+    * `docs/source/substitutions.rst` (the copyright tag)
+    * `docs/source/conf.py` (the `copyright` variable)
+    * `docs/source/license.rst`
+    * `README.md` (the copyright section)
+
+The copyright years are also present in all the docstring modules. These can be updated individually
+if/when a modification is made to a given module.
