@@ -9,6 +9,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ### Fixed:
  - [fpavogt, 2022-01-10] Fix issues #40 and #41.
 ### Changed:
+ - [fpavogt, 2022-01-10] Update copyright years.
 ### Deprecated:
 ### Removed:
 ### Security:
